package com.http.post.model;

public enum Method {
    GET, POST, PUT, DELETE, PATCH
}
